--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,201 @@
+*, *::before,*::after{
+  box-sizing: border-box  ;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Manrope',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: inherit;
+  background-color: hsl(210, 46%, 95%);
+  color: hsl(214, 17%, 51%);
+ 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html{
+  font-size: 13px;
+}
+
+ h1{
+  font-size: 2rem;
+ }
+ p{
+  font-size: 1rem;
+ }
+ 
+ .fontBold{
+  font-weight: 500;
+ }
+ .fontBlack{
+  font-weight: 700;
+ }
+
+ .container{
+  width: 60%;
+  height: 50%;
+  margin: 25% auto;
+ 
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+
+
+ }
+
+ .left-side{
+  width: 40%;
+
+ }
+ .left-side img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top left;
+    border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+ }
+ .right-side{
+  width: 60%;
+  padding: 2em;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #fff;
+ }
+ .footer{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+ }
+
+ .footer > div {
+  margin-right: 1.25em;
+ 
+ }
+
+ .item1 img{
+  border-radius: 100px;
+  width: 4em;
+  height: 4em;
+ }
+.item3{
+  width: 3em;
+  height: 3em;
+  border-radius: 100px;
+  background-color: hsl(210, 46%, 95%);
+  margin-left: auto;
+  text-align: center;
+  display: grid;
+  place-items: center;
+  
+}
+.item3 img{
+  border-radius: 50px;
+  width: 1em;
+  height: 1em;
+  object-position: center center;
+   
+}
+
+.share{
+  border-radius: 50px;
+  border: none;
+  width: 3em;
+  height: 3em;
+}
+.follow{
+  position: relative;
+  display: inline-block;
+  background-color: hwb(217 28% 58%) ;
+  padding: 1.2em;
+  left: 70%;
+  bottom: 20%;
+  border-radius: 10px;
+  text-align: center;
+  align-items: center;
+}
+.follow-span{
+  margin-right: 1.4em;
+  font-weight: 500;
+}
+
+.follow img{
+  margin-right: 1.4em;
+}
+.arrow{
+  width: 0;
+  height: 0;
+  border-top: 10px solid hsl(217, 19%, 35%) ;
+  border-left: 10px solid transparent ;
+  border-right: 10px solid transparent ;
+  left: 40%;
+  bottom: -10px;
+  position: absolute;
+  transform: translateX(-50%);
+  
+}
+
+@media screen and (max-width: 767px) {
+  body{
+    padding: 2em;
+    margin: 0;
+  }
+  .container{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+   
+
+  }
+  .left-side{
+    width: 100%;
+    height: 40%;
+  
+    
+  }
+  .left-side img{
+    border-top-left-radius: 15px ;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 0;
+  }
+  .right-side{
+    width: 100%;
+    height: 60%;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 15px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 15px;
+  }
+}
+
+@media screen and (min-width: 768px)and (max-width: 1024px) {
+  body{
+    padding: 2em;
+    margin: 0;
+  }
+  .container{
+    
+   
+
+  }
+  .left-side{
+    width: 100%;
+    height: 40%;
+  
+    
+  }
+  .left-side img{
+    border-top-left-radius: 15px ;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 0;
+  }
+  .right-side{
+    width: 100%;
+    height: 60%;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 15px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 15px;
+  }
 }
